set(LIBXM_SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src")
set(LIBXM_COMPAT_DIR "${CMAKE_CURRENT_LIST_DIR}/compat")

if(CONFIG_XM_SAMPLE_FLOAT)
    set(XM_SAMPLE_TYPE "float")
elseif(CONFIG_XM_SAMPLE_INT16)
    set(XM_SAMPLE_TYPE "int16_t")
elseif(CONFIG_XM_SAMPLE_INT8)
    set(XM_SAMPLE_TYPE "int8_t")
elseif(CONFIG_XM_SAMPLE_DD4A)
    set(XM_SAMPLE_TYPE "dd4a_t")
elseif(CONFIG_XM_SAMPLE_DD8A)
    set(XM_SAMPLE_TYPE "dd8a_t")
else()
    set(XM_SAMPLE_TYPE "int16_t")
endif()

# libxm tunables are provided by Kconfig (see main/Kconfig.projbuild,
# menu "espmodp configuration"). Fall back to the upstream defaults if
# the ESP-IDF config vars are not yet defined (eg. before `idf.py
# reconfigure` has been run with the new Kconfig symbols).
if(NOT DEFINED CONFIG_XM_SAMPLE_RATE)
    set(CONFIG_XM_SAMPLE_RATE "0")
endif()
if(NOT DEFINED CONFIG_XM_MICROSTEP_BITS)
    set(CONFIG_XM_MICROSTEP_BITS "12")
endif()
if(NOT DEFINED CONFIG_XM_PANNING_TYPE)
    set(CONFIG_XM_PANNING_TYPE "8")
endif()
if(NOT DEFINED CONFIG_XM_LOOPING_TYPE)
    set(CONFIG_XM_LOOPING_TYPE "2")
endif()
if(NOT DEFINED CONFIG_XM_DISABLED_EFFECTS)
    set(CONFIG_XM_DISABLED_EFFECTS "0x0")
endif()
if(NOT DEFINED CONFIG_XM_DISABLED_VOLUME_EFFECTS)
    set(CONFIG_XM_DISABLED_VOLUME_EFFECTS "0x0")
endif()
if(NOT DEFINED CONFIG_XM_DISABLED_FEATURES)
    set(CONFIG_XM_DISABLED_FEATURES "0x0")
endif()

configure_file("${LIBXM_SRC_DIR}/xm.h.in" "${CMAKE_CURRENT_BINARY_DIR}/xm.h" @ONLY)

idf_component_register(
    SRCS
        "${LIBXM_SRC_DIR}/xm.c"
        "${LIBXM_SRC_DIR}/load.c"
        "${LIBXM_SRC_DIR}/play.c"
        "${LIBXM_SRC_DIR}/analyze.c"
    INCLUDE_DIRS
        "${CMAKE_CURRENT_BINARY_DIR}"
    PRIV_INCLUDE_DIRS
        "${LIBXM_COMPAT_DIR}"
        "${LIBXM_SRC_DIR}"
    PRIV_REQUIRES
        libsac
)

target_compile_options(${COMPONENT_LIB} PRIVATE -O3 -ffast-math -Wno-error=maybe-uninitialized)
target_compile_definitions(${COMPONENT_LIB} PRIVATE
    XM_VERBOSE=$<BOOL:${CONFIG_XM_VERBOSE}>
    XM_LINEAR_INTERPOLATION=$<BOOL:${CONFIG_XM_LINEAR_INTERPOLATION}>
    XM_RAMPING=$<BOOL:${CONFIG_XM_RAMPING}>
    XM_LIBXM_DELTA_SAMPLES=$<BOOL:${CONFIG_XM_LIBXM_DELTA_SAMPLES}>
    XM_STRINGS=$<BOOL:${CONFIG_XM_STRINGS}>
    XM_TIMING_FUNCTIONS=$<BOOL:${CONFIG_XM_TIMING_FUNCTIONS}>
    XM_MUTING_FUNCTIONS=$<BOOL:${CONFIG_XM_MUTING_FUNCTIONS}>
    XM_MOD_SOFT_PANNING=$<BOOL:${CONFIG_XM_MOD_SOFT_PANNING}>
    XM_SAMPLE_RATE=${CONFIG_XM_SAMPLE_RATE}
    XM_MICROSTEP_BITS=${CONFIG_XM_MICROSTEP_BITS}
    XM_PANNING_TYPE=${CONFIG_XM_PANNING_TYPE}
    XM_LOOPING_TYPE=${CONFIG_XM_LOOPING_TYPE}
    "XM_DISABLED_EFFECTS=${CONFIG_XM_DISABLED_EFFECTS}ULL"
    "XM_DISABLED_VOLUME_EFFECTS=${CONFIG_XM_DISABLED_VOLUME_EFFECTS}ULL"
    "XM_DISABLED_FEATURES=${CONFIG_XM_DISABLED_FEATURES}ULL"
)
if(XM_SAMPLE_TYPE STREQUAL "dd4a_t")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE XM_SAMPLE_TYPE_DD4A=1)
elseif(XM_SAMPLE_TYPE STREQUAL "dd8a_t")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE XM_SAMPLE_TYPE_DD8A=1)
endif()
target_link_libraries(${COMPONENT_LIB} PRIVATE m)
